--- a/NutritionAnalyses/view/home.html
+++ b/NutritionAnalyses/view/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="home.css" />
 
   </head>
 
@@ -14,7 +14,7 @@
         <li><a class="sobre" href="#"><span>Sobre</a></span></li>
         <li><a class="links" href="#"><span>Links</a></span></li>
         <li><a class="contato" href="http://google.com.br"><span>Contato</a></span>
-        <li><a class="logon" href="#"><span>Logon</a></span></li>
+        <li><a class="logon" href="file:///C:/xampp/htdocs/NutritionAnalyses/view/logon.html"><span>Logon</a></span></li>
         </li>
       </ul>
     </nav>
